# Visual_Assessment_Tasks

Deeplearning/1.最终考查——训练手写数字网络：/: 训练手写数字网络.py
Deeplearning/deepling/src/: main.py
opencv(任务一）/: CMakeLists.txt
opencv(任务一）/src/: main.cpp  任务1.cpp  任务2.cpp  任务4.cpp  任务6.cpp  任务7.cpp
